ChangeLog for herdstat

2005-03-10 Aaron Walker <ka0ttic@gentoo.org>

	* Makefile.am: Added TODO target for automatically generating the TODO
	file with devtodo.
	* src/herds_xml_handler.cc: append '@gentoo.org' to email addresses
	that lack it.
	* src/util.cc: Make current_user() return the whole email address.
	* src/herds.cc, src/herds.hh: Added herd_T::keys(); cleaned up
	herd_T::display() a little.
	* src/xmlparser.hh: Added a few comments.

2005-03-09 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version (release-0.3).
	* bashcomp: Fixed the two errant ')' causing 'all' completion to
	complete to 'all\)'.  Also, moving out of distribution and into the
	portage tree for easier access.
	* doc/herdstat.1.in: Updated for --outfile.
	* src/herdstat.cc: Added new command-line option --outfile.
	* src/herds.cc: Fix bug where yellow user highlighting doesn't occur
	in verbose output. Also fixed another bug where output was being sent
	to stdout instead of the stream arg if options.quiet().
	* src/devs.hh: Fix dev_attrs_T::display() to only display all
	developer attributes if option all is not set.
	* src/options.cc, src/options.hh: Added options all, outfile, and
	outstream.
	* src/action_herd_handler.cc, src/action_dev_handler.cc,
	src/action_pkg_handler.cc: Updated to use options_T::outstream()
	instead of std::cout.

2005-03-08 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version (release-0.2).
	* doc/herdstat.1.in: Added a few more examples.
	* src/util.cc, src/util.hh: Added copy_file(), move_file(), and
	get_user_from_email().
	* src/herdstat.cc: Use cached copy of herds.xml if it exists and we
	are unable to fetch it.
	* src/herds.cc: Highlight current user's nick *after* sorting,
	otherwise the highlighted nick will always be at the beginning of the
	vector.

2005-03-07 Aaron Walker <ka0ttic@gentoo.org>

	* bashcomp: Now that the 'all' target is completed, we can now use it
	to generate our completions!