@@ -1,19 +1,10 @@
-<!-- Automagically generated by the ToDo program on 2005-03-10 -->
+<!-- Automagically generated by the ToDo program on 2005-03-11 -->
 <todo version="0.1.18">
     <title>
         Todo list for herdstat
     </title>
-    <note priority="veryhigh" time="1110445182">
-        Modify formatter_T::append() to automatically handle options.quiet()
-        <note priority="medium" time="1110445835">
-            Same goes for flush()
-        </note>
-    </note>
     <note priority="veryhigh" time="1110445215">
         Modify formatter_T::append() to support word highlighting.
-    </note>
-    <note priority="high" time="1110445718">
-        Add a --fetch option to force a fetch.
     </note>
     <note priority="low" time="1109945378">
         Figure out a way to trip excess whitespace inside elements.
